# PCL-Project

./: CMakeLists-QT4.txt  CMakeLists.txt  PCL-Project.pro  PCL-Task2.pro  README.md  controlbar.cpp  controlbar.h  controlbar.ui  main.cpp  mainwindow (copy).ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pclproject.cpp  pclproject.h
Libs/: camera.cpp  camera.h  chessboard.cpp  chessboard.h  cropbox.cpp  cropbox.h  featuredetector.cpp  featuredetector.h  fileio.cpp  fileio.h  imagemanipulator.cpp  imagemanipulator.h  pointcloud.cpp  pointcloud.h  pointcloudmanager.cpp  pointcloudmanager.h  pointcloudvisualizer.cpp  pointcloudvisualizer.h  stereocamera.cpp  stereocamera.h  taskmanager.cpp  taskmanager.h  threadmanager.cpp  threadmanager.h
